--- a/Projects/TetrisEnhanced/.vscode/launch.json
+++ b/Projects/TetrisEnhanced/.vscode/launch.json
@@ -7,8 +7,9 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "debugger",
-            "url": "http://127.0.0.1:5500/Projects/TetrisEnhanced/Html/tetris-solo.html",
+            "name": "Launch Chrome against localhost",
+            "url": "http://127.0.0.1:5500/Html/tetris-solo.html",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
