--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+        
+
         {
             "type": "chrome",
             "request": "launch",
-            "name": "debugger",
+            "name": "debugger-ai",
             "url": "http://127.0.0.1:5500/Projects/TetrisEnhanced/Html/tetris-solo.html",
         }
     ]
