--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-        
+        {
+            "name": "Launch Chrome",
+            "request": "launch",
+            "type": "chrome",
+            "url": "http://127.0.0.1:5500/Projects/TetrisEnhanced/Html/tetris-solo.html",
+            "webRoot": "${workspaceFolder}"
+        },
 
         {
             "type": "chrome",
             "request": "launch",
             "name": "debugger-ai",
-            "url": "http://127.0.0.1:5500/Projects/TetrisEnhanced/Html/tetris-solo.html",
+            "url": "http://127.0.0.1:5500/Projects/TetrisEnhanced/Html/tetris-vs-ai.html",
         }
     ]
 }
