--- a/Projects/TetrisEnhanced/.vscode/launch.json
+++ b/Projects/TetrisEnhanced/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://127.0.0.1:5500/Html/tetris-solo.html",
+            "url": "http://127.0.0.1:5500/Html/menu.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
